# starting-ragchatbot-codebase

./: CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/tests/: README.md  __init__.py  conftest.py  test_api.py
frontend/: index.html  script.js  style.css
scripts/: quality.sh
